# CollisionDetection-GPU

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
docs/: final.typ  mid.typ
res/: sphere.mtl
shaders/: assign.wgsl  build_grid.wgsl  collision.wgsl  collision_naive.wgsl  compute.wgsl  header.wgsl  kernel.wgsl  light.wgsl  memset.wgsl  sort.wgsl
src/: camera.rs  compute.rs  framework.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  resources.rs  texture.rs  utils.rs
