[package]
name = "collision-detection-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.1"
log = "0.4.20"
wgpu = "0.18.0"
winit = "0.29.4"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook="0.1.7"
console_log="1.0.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen="0.2.89"
wasm-bindgen-futures="0.4.39"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement"
]}
