[package]
name = "collision-detection-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.1"
log = "0.4.20"
wgpu = "0.18.0"
winit = "0.28.7"
pollster = "0.3.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
app-surface = "0.3.5"
instant = "0.1"
anyhow = "1.0"
tobj = { version = "3.2", features = ["async"] }
image = { version = "0.23", features = ["jpeg", "png"] }
rand = "0.8"

# build dependenies
[build-dependencies]
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

# [lib]
# crate-type = ["cdylib", "rlib"]

[[bin]]
name = "my-collision-detect"
path = "src/main.rs"